# Dance-Dance

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml  code-format.yml
assets/tapes/: im-in-a-hurry.tape
include/DanceDance/: Arrow.hpp  Button.hpp  EventSystem.hpp  Game.hpp  GameEvents.hpp  GameState.hpp  IScene.hpp  MainMenu.hpp  Runner.hpp  SVGTexture.hpp  SelectSong.hpp  SongFinder.hpp  Tape.hpp
src/: Arrow.cpp  Button.cpp  Game.cpp  MainMenu.cpp  Runner.cpp  SVGTexture.cpp  SelectSong.cpp  SongFinder.cpp  Tape.cpp  main.cpp
